Fix external links and colors in dark mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -71,6 +71,9 @@
   // --sidebar-width-mobile: calc(var(--sidebar-width) * 0.82);
   // --content-width: 740px;
   // --homepage-width: 960px;
+
+  --sidebar-heading-bg: #002b36;
+  --sidebar-heading-color: #fdf6e3;
 }
 
 html.dark {
@@ -107,6 +110,8 @@ html.dark {
 
   // // code blocks vars
   // --code-hl-bg-color: #363b46;
+
+  --sidebar-heading-bg: var(--c-bg);
 }
 
 
@@ -178,5 +183,6 @@ html.dark {
 }
 
 .sidebar-heading {
-  color: var(--c-brand);
+  color: var(--sidebar-heading-color);
+  background-color: var(--sidebar-heading-bg);
 }
